--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,12 @@
   }
 }
 
+#floorp {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 2fr 1fr 2fr;
+}
+
 div {
   border: 1px solid grey;
   margin: 5px;
@@ -45,27 +51,46 @@ div {
 
 .livingroom{
   background-color: #EFE7BC;
+  display: grid;
+  grid-row: 1/3;
+  grid-column: 3/4;
   
 }
 .kitchen {
-  display: flex;
-  justify-content: right;
-  background-color: #FFA384
+  grid-template-columns: 1fr 1fr;
+  grid-row: 1/3;
+  grid-column: 4/5;
+  height: 200px;
+  width: 100px;
+  background-color: #FFA384;
 
 }
+#kitch{
+  display: flex-end;
+  text-align: center;
+}
 .sink{
-  display: flex;
-  justify-content: flex-start;
   background-color: #B5E5CF;
+  display: flex;
+  align-self: flex-start;
 }
 .oven {
   background-color: #543855;
   color: #EFE7BC;
+  display: flex;
+  align-self: flex-start;
 }
 
 .bedroom {
   background-color: #658EA9;
+
+}
+#bedroom-1{
+  display: grid;
+
+
 }
 .bath {
   background-color: #74BDCB;
 }
+
